--- a/days/src/main/resources/templates/index.html
+++ b/days/src/main/resources/templates/index.html
@@ -12,17 +12,17 @@
             <th>Name</th>
             <th>シフト</th>
         </tr>
-        <tr th:each="list1,each:${list1}">
-            <!--td th:text="${list.nameList}"/-->
-            <!--td th:text="${list.shiftName}"/-->
+        <tr th:each="list,each:${list}">
+            <td th:text="${list.nameList}"/>
+            <td th:text="${list.shiftName}"/>
         </tr>
     </table>
     <table border="1">
         <tr>
             <th>シフト1</th>
         </tr>
-        <tr th:each="list1,each:${list1}">
-            <td th:text="${list1.listOne}"/>
+        <tr th:each="list,each:${list}">
+            <td th:field="${list.nameList}"/>
         </tr>
 
     </table>
