--- a/days/src/main/resources/templates/start.html
+++ b/days/src/main/resources/templates/start.html
@@ -21,8 +21,10 @@
     <form method="post" action="#" th:action="@{/shift}">
         <button type="submit" >シフト表</button>
     </form>
-    <form method="post" action="#" th:action="@{/list}">
+    
+    <form method="GET" action="#" th:action="@{/list}">
         <button type="submit" >勤怠カレンダー</button>
     </form>
+    
 </body>
 </html>
