--- a/days/src/main/resources/templates/calclate.html
+++ b/days/src/main/resources/templates/calclate.html
@@ -3,15 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>出</title>
+    <title>自動計算</title>
+    <style>
+        span{
+            color: red ;
+        }
+    
+    </style>
 </head>
 <body>
     <form method="GET" action="#" th:action="@{/}">
         <button type="submit" >戻る</button>
     </form>
     <form method="POST" action="#" th:object="${updateCode}">
-        <input type="text" th:field="${updateCode.shiftOneCode}">
-        <p th:text=${updateCode.shiftOneCode}></p>
+       
+        <p>一斉休暇日を入力してください</p>
+        <input type="text">
+        <p>月始めの出勤開始日を入力してください<br>
+        <span>※一斉休暇は除く</span></p>
+        <input type="number" max="31" min="1" value="1" th:field="${updateCode.inputDate}">
+        <p>「シフト1」出勤開始日から5日間の数字を入力してください<br>
+            例：[1,1,ヤ,3,3]の場合、「11433」<br>
+        <span>※一斉休暇は除き、「ヤ」(休み)の場合は「4」を入力してください</span></p>
+        <input type="text" th:field="${updateCode.inputCode}">
+        <input type="submit" value="計算">
     </form>
 </body>
 </html>
