--- a/days/src/main/resources/templates/start.html
+++ b/days/src/main/resources/templates/start.html
@@ -18,7 +18,7 @@
 </head>
 <body>
     <h2>こちらは勤怠管理アプリです</h2>
-    <form method="post" action="#" th:action="@{/shift}">
+    <form method="GET" action="#" th:action="@{/shift}">
         <button type="submit" >シフト表</button>
     </form>
     
